Closed Bug 129608 Opened 23 years ago Closed 22 years ago

parsererror should be in its own namespace

Categories

(Core :: XML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.0

People

(Reporter: hjtoi-bugzilla, Assigned: hjtoi-bugzilla)

Details

(Whiteboard: [fixinhand])

Attachments

(1 file, 1 obsolete file)

Right now it is in no namespace or maybe XHTML namespace; wrong in any case.
Should be trivial fix, but needed since we have CSS style rules for these
elements in the ua.css...
I also noticed we weren't cleaning up the document before adding the parser error.
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [fixinhand]
Target Milestone: --- → mozilla1.0
Harish, can you review?

I could remove nsExpatTokenizer.cpp while I check this in. Nobody should be
using it.

I am also wondering what are we doing with all the HTML tag / parsererror stuff?
See the LXR search: http://lxr.mozilla.org/mozilla/search?string=parsererror
Comment on attachment 73329 [details] [diff] [review]
Remember XUL content sink too

r=harishd (Could you also remove htmlparser/public/nsIExpatTokenizer.idl
htmlparser/src/nsWellFormedDTD.* ?
)
Attachment #73329 - Flags: review+
oops, there is no nsIExpatTokenzier.idl. Please remove nsIExpatTokenizer.h. Thanx.
Attachment #73329 - Flags: superreview+
Comment on attachment 73329 [details] [diff] [review]
Remember XUL content sink too

sr=jst
Comment on attachment 73329 [details] [diff] [review]
Remember XUL content sink too

a=roc+moz
Attachment #73329 - Flags: approval+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
QA Contact: petersen → rakeshmishra
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: