Bug 129608, moving XML parsererror into its own namespace along with the CSS rules so it won't mess up with web pages using parsererror and sourcetext tags. Clean up the content tree before parser error. Also removing dead files. r=harishd, sr=jst, a=roc+moz@cs.cmu.edu.